--- a/pandasbasicao.ipynb
+++ b/pandasbasicao.ipynb
@@ -277,16 +277,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#quero criar uma coluna que vai categorizar dados de alguma coluna.\n",
-    "#primeiro, é necessário criar uma função par isso\n",
+    "#para fazer um filtro em uma coluna pelo termo de alguma linha\n",
+    "#serve, por exemplo, para filtrar um Estado em coluna com vários\n",
     "\n",
-    "def categoriza(s):\n",
-    "    if s >= 80:\n",
-    "       return 'Big'\n",
-    "    elif s >= 60:\n",
-    "       return 'Medium'\n",
-    "    elif s >= 40:\n",
-    "       return 'Small'"
+    "df.loc[df['nome_da_coluna'] == 'Espírito Santo']\n",
+    "\n",
+    "#é possível fazer esse filtro com número ou mesmo com uma conta.\n",
+    "#a seguir, mostrando apenas as linhas com mais de 50%.\n",
+    "\n",
+    "df.loc[df['nome_da_coluna_com_número']*100 >= 50]"
    ]
   },
   {
